--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -9,6 +9,19 @@
 
 <body>
     <h1>Things I Need To Do</h1>
+    <table>
+        {% for item in items %}
+            <tr>
+                {% if item.done %}
+                    <td><strike>{{ item.name }}</strike></td>
+                {% else %}
+                    <td>{{ item.name }}</td>
+                {% endif %}
+            </tr>
+        {% empty %}
+            <tr><td>You have no tasks currently.</td></tr>
+        {% endfor %}
+    </table>
 </body>
 
 </html>
