--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To Do</title>
 </head>
 
 <body>
@@ -17,11 +17,27 @@
                 {% else %}
                     <td>{{ item.name }}</td>
                 {% endif %}
+                <td>
+                    <a href="/toggle/{{ item.id }}">
+                        <button>Toggle</button>
+                    </a>
+                </td>
+                <td>
+                    <a href="/edit/{{ item.id }}">
+                        <button>Edit</button>
+                    </a>
+                </td>
+                <td>
+                    <a href="/delete/{{ item.id }}">
+                        <button>Delete</button>
+                    </a>
+                </td>
             </tr>
         {% empty %}
             <tr><td>You have no tasks currently.</td></tr>
         {% endfor %}
     </table>
+    <a href="/add">Add an Item</a>
 </body>
 
 </html>
